<resources>
    <string name="app_name">Dash</string>
    <string name="new_customer">Customer</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="name">Name:</string>
    <string name="phone">Contact:</string>
    <string name="dob">D.O.B:</string>
    <string name="name_error">Name is too short.</string>
    <string name="phone_error">Mobile No. only.</string>
    <string name="dob_error">Date of birth is required.</string>
    <string name="new_invoice">New Invoice</string>
    <string name="Item">Item:</string>
    <string name="add_item">Add Item</string>
    <string name="add_inventory">Inventory</string>
    <string name="purity">Purity:</string>
    <string name="Category">Category:</string>
    <string name="Weight">Weight:</string>
    <string name="Supplier">Supplier:</string>
    <string name="Wastage">Touch:</string>
    <string name="gross">Gross:</string>
    <string name="less">Less:</string>
    <string name="net">Net:</string>
    <string name="Extra">Charges:</string>
    <string name="clear">Clear</string>
    <string name="add">Add</string>
    <string name="close">Close</string>
    <string name="add_this_supplier_to_the_list">Add this Supplier to the list?</string>
    <string name="this_is_the_business_name">This is the Business Name.</string>
    <string name="supplier_success">Supplier added successfully.</string>
    <string name="settings">Settings</string>
    <string name="zero">0.00</string>
    <string name="gross_weight_error">Gross weight cannot be empty.</string>
    <string name="per_gram">Per Gram</string>
    <string name="percent">Percent</string>
    <string name="lumpsum">Lump-sum</string>
    <string name="add_details">Add Details</string>
    <string name="labour">Labour:</string>
    <string name="payment_method">Payment Method</string>
    <string name="new_deposit">Deposit</string>
    <string name="Address">City:</string>
    <string name="Proceed">Proceed</string>
    <string name="ModeCash">Cash</string>
    <string name="ModeUPI">UPI</string>
    <string name="ModePaytm">Paytm</string>
    <string name="ModeCard">Swipe</string>
    <string name="error_payment">Please select a payment mode \nto proceed further.</string>
    <string name="delete">Delete</string>
    <string name="details">Details</string>
    <string name="error_invoice">Printing failed.\nCheck your internet connection &amp; try again in 2 minutes. </string>
    <string name="Supplier_1">Supplier</string>
    <string name="profile">Profile</string>
    <string name="Supplier_2">New Supplier:</string>
    <string name="Supplier_3">Suppliers:</string>
    <string name="business">Business:</string>
    <string name="owner">Owner:</string>
    <string name="city">City:</string>
    <string name="gstin">GSTIN:</string>
    <string name="add_supplier">New Supplier</string>
    <string name="update_supplier">Update</string>
    <string name="name_error_1">Name cannot be empty.</string>
    <string name="HUID">HUID:</string>
    <string name="search_inventory">Search inventory</string>
    <string name="add_items_to_invoice">Add items to invoice</string>
    <string name="items_sold">Items Sold</string>
    <string name="invoices_made">Invoices Made</string>
    <string name="new_customers">New Customers</string>
    <string name="total_sales">Total Sales</string>
    <string name="revenue">Revenue</string>
    <string name="lac">Lac.</string>
    <string name="gm">gm</string>
    <string name="daily_reminder">Daily Reminder:</string>
    <string name="retry">Try Again?</string>
    <string name="Category_1">Category</string>
    <string name="print">Print</string>
    <string name="advanced_options"><u>Advanced Options</u></string>
    <string name="Amount">Amount:</string>
    <string name="Mode">Mode:</string>
    <string name="ModeBank">NEFT/RTGS</string>
    <string name="ModeCheque">Cheque</string>
    <string name="Gold">Gold:</string>
    <string name="Silver">Silver:</string>
    <string name="invoice_summary">Invoice Summary:</string>
    <string name="Tax">GST:</string>
    <string name="Total">Gross Total</string>
    <string name="reports">Analytics</string>
    <string name="ModeMetal">Metal</string>
    <string name="Balance">Balance:</string>
    <string name="new_order">New Order</string>
    <string name="MetalBalance">Metal:</string>
    <string name="order_list">Manage Orders</string>
    <string name="Rhodium">Rhodium</string>
    <string name="Solitaire">Solitaire</string>
    <string name="SwarovskiD">Swarovski</string>
    <string name="HM">H.M.</string>
    <string name="Moti">Moti</string>
    <string name="new_order_header">New Order</string>
    <string name="select_order_tv">Select an Order to Continue.</string>
    <string name="search_generic">Search...</string>
    <string name="rate">Rate Fix:</string>
    <string name="due_tomorrow">Due tomorrow.</string>
    <string name="add_item_1">Add Items below:</string>
    <string name="Weights">Weight</string>
    <string name="OrderDateString">Order on</string>
    <string name="DeliveryDate">Delivery on</string>
    <string name="AdAmount">Advance:</string>
</resources>