<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="520dp"
    android:layout_height="360dp"
    android:layout_gravity="center"
    android:elevation="8dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@drawable/popup_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:elevation="4dp"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/header_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="New Cash Deposit"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:paddingTop="4dp"
        android:paddingBottom="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/textview_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/label1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_title"/>

    <EditText
        android:id="@+id/name_etv"
        android:layout_width="320dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="48dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:background="@drawable/etv_background"
        app:layout_constraintTop_toTopOf="@id/label1"
        app:layout_constraintBottom_toBottomOf="@id/label1"
        app:layout_constraintStart_toEndOf="@id/label1"/>

    <TextView
        android:id="@+id/NameError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:gravity="center_vertical"
        android:textSize="11sp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/name_etv"
        app:layout_constraintStart_toStartOf="@id/name_etv"
        app:drawableStartCompat="@drawable/warning" />

    <TextView
        android:id="@+id/label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/NameError"/>

    <EditText
        android:id="@+id/phone_etv"
        android:layout_width="320dp"
        android:layout_height="30dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="8dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:background="@drawable/etv_background"
        app:layout_constraintTop_toTopOf="@id/label2"
        app:layout_constraintBottom_toBottomOf="@id/label2"
        app:layout_constraintStart_toStartOf="@id/name_etv"/>

    <TextView
        android:id="@+id/PhoneError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:gravity="center_vertical"
        android:textSize="11sp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/phone_etv"
        app:layout_constraintStart_toStartOf="@id/phone_etv"
        app:drawableStartCompat="@drawable/warning"/>

    <TextView
        android:id="@+id/label3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Amount"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/PhoneError"/>


    <EditText
        android:id="@+id/cash_etv"
        android:layout_width="320dp"
        android:layout_height="30dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="8dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:inputType="numberDecimal"
        android:background="@drawable/etv_background"
        app:layout_constraintTop_toTopOf="@id/label3"
        app:layout_constraintBottom_toBottomOf="@id/label3"
        app:layout_constraintStart_toStartOf="@id/name_etv"/>

    <TextView
        android:id="@+id/cash_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:gravity="center_vertical"
        android:textSize="11sp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/cash_etv"
        app:layout_constraintStart_toStartOf="@id/name_etv"
        app:drawableStartCompat="@drawable/warning"/>

    <TextView
        android:id="@+id/label4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Mode"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cash_error"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/ModeOfPaymentChips"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:singleSelection="false"
        app:layout_constraintTop_toBottomOf="@id/cash_error"
        app:layout_constraintStart_toStartOf="@id/name_etv">
        <com.google.android.material.chip.Chip
            android:id="@+id/Chip1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:checkable="true"
            app:chipEndPadding="2dp"
            app:chipStartPadding="2dp"
            app:checkedIcon="@drawable/check"
            android:text="@string/ModeCash"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/Chip2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:checkable="true"
            app:chipEndPadding="2dp"
            app:chipStartPadding="2dp"
            app:checkedIcon="@drawable/check"
            android:text="@string/ModeUPI"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/Chip3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:checkable="true"
            app:chipEndPadding="2dp"
            app:chipStartPadding="2dp"
            app:checkedIcon="@drawable/check"
            android:text="@string/ModeCard"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/Chip4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:checkable="true"
            app:chipEndPadding="2dp"
            app:chipStartPadding="2dp"
            app:checkedIcon="@drawable/check"
            android:text="@string/ModeBank"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/Chip5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:checkedIcon="@drawable/check"
            android:textSize="11sp"
            android:checkable="true"
            app:chipEndPadding="2dp"
            app:chipStartPadding="2dp"
            android:text="@string/ModeCheque"/>
    </com.google.android.material.chip.ChipGroup>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/Fetch_Customer_Details"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:elevation="8dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/label1"
        app:layout_constraintTop_toBottomOf="@id/label2"
        app:layout_constraintEnd_toEndOf="@id/phone_etv"
        app:layout_constraintBottom_toTopOf="@id/save">
    </androidx.recyclerview.widget.RecyclerView>


    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginTop="48dp"
        android:padding="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cancel"/>

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:padding="0dp"
        android:layout_marginTop="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>