<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="520dp"
    android:layout_height="360dp"

    android:layout_gravity="center"
    android:elevation="8dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@drawable/popup_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/header_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Add Item to Invoice"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:paddingTop="6dp"
        android:paddingBottom="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/textview_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/Label1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/purity"
        android:labelFor="@id/purity_etv"
        app:layout_constraintTop_toBottomOf="@id/header_title"
        app:layout_constraintStart_toStartOf="parent"/>

    <Spinner
        android:id="@+id/purity_etv"
        android:layout_width="320dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="48dp"
        android:paddingStart="8dp"
        android:paddingEnd="4dp"
        android:spinnerMode="dialog"
        android:background="@drawable/etv_background"
        app:layout_constraintStart_toEndOf="@id/Label1"
        app:layout_constraintTop_toTopOf="@id/Label1"
        app:layout_constraintBottom_toBottomOf="@id/Label1"/>

    <TextView
        android:id="@+id/Label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/Category"
        android:labelFor="@id/category_etv"
        app:layout_constraintTop_toBottomOf="@id/Label1"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/category_etv"
        android:layout_width="320dp"
        android:layout_height="0dp"
        android:layout_marginEnd="48dp"
        android:paddingStart="8dp"
        android:paddingEnd="4dp"
        android:spinnerMode="dialog"
        android:background="@drawable/etv_background"
        app:layout_constraintStart_toStartOf="@id/purity_etv"
        app:layout_constraintTop_toTopOf="@id/Label2"
        app:layout_constraintBottom_toBottomOf="@id/Label2"/>


    <TextView
        android:id="@+id/Label3_1"
        android:text="@string/gross"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/Label2"
        app:layout_constraintStart_toStartOf="parent"/>


    <EditText
        android:id="@+id/weight_etv"
        android:layout_width="67dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:paddingStart="8dp"
        android:paddingEnd="4dp"
        android:inputType="numberDecimal"
        android:background="@drawable/etv_background"
        app:layout_constraintStart_toStartOf="@id/purity_etv"
        app:layout_constraintTop_toTopOf="@id/Label3_1"
        app:layout_constraintBottom_toBottomOf="@id/Label3_1"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/NameError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:gravity="center_vertical"
        android:textSize="11sp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/weight_etv"
        app:layout_constraintStart_toStartOf="@id/weight_etv"
        app:drawableStartCompat="@drawable/warning" />

    <TextView
        android:id="@+id/Label3_2"
        android:text="@string/less"
        android:layout_marginStart="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/Label3_1"
        app:layout_constraintStart_toEndOf="@id/weight_etv"
        app:layout_constraintBottom_toBottomOf="@id/Label3_1"/>

    <EditText
        android:id="@+id/less_weight_etv"
        android:layout_width="67dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="6dp"
        android:paddingStart="8dp"
        android:paddingEnd="4dp"
        android:inputType="numberDecimal"
        android:background="@drawable/etv_background"
        app:layout_constraintStart_toEndOf="@id/Label3_2"
        app:layout_constraintTop_toTopOf="@id/Label3_1"
        app:layout_constraintBottom_toBottomOf="@id/Label3_1"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/Label3_3"
        android:text="@string/net"
        android:layout_marginStart="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/Label3_1"
        app:layout_constraintStart_toEndOf="@id/less_weight_etv"
        app:layout_constraintBottom_toBottomOf="@id/Label3_1"/>

    <EditText
        android:id="@+id/net_weight_etv"
        android:layout_width="67dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="6dp"
        android:paddingStart="8dp"
        android:paddingEnd="4dp"
        android:enabled="false"
        android:inputType="numberDecimal"
        android:background="@drawable/etv_background"
        app:layout_constraintStart_toEndOf="@id/Label3_3"
        app:layout_constraintTop_toTopOf="@id/Label3_1"
        app:layout_constraintBottom_toBottomOf="@id/Label3_1"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/Label4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/Extra"
        android:labelFor="@id/supplier_etv"
        app:layout_constraintTop_toBottomOf="@id/NameError"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/charges_etv"
        android:layout_width="67dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:paddingStart="8dp"
        android:paddingEnd="4dp"
        android:inputType="number"
        android:background="@drawable/etv_background"
        app:layout_constraintStart_toStartOf="@id/purity_etv"
        app:layout_constraintTop_toTopOf="@id/Label4"
        app:layout_constraintBottom_toBottomOf="@id/Label4"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/Label5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/Supplier"
        android:labelFor="@id/supplier_etv"
        app:layout_constraintTop_toBottomOf="@id/Label4"
        app:layout_constraintStart_toStartOf="parent"/>

    <Spinner
        android:id="@+id/supplier_etv"
        android:layout_width="280dp"
        android:layout_height="0dp"
        android:spinnerMode="dialog"
        android:layout_marginEnd="48dp"
        android:paddingStart="8dp"
        android:paddingEnd="4dp"
        android:background="@drawable/etv_background"
        app:layout_constraintStart_toStartOf="@id/purity_etv"
        app:layout_constraintTop_toTopOf="@id/Label5"
        app:layout_constraintBottom_toBottomOf="@id/Label5" />

    <TextView
        android:id="@+id/Attention_text_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/mattegrey"
        android:textSize="12sp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:visibility="gone"
        android:gravity="center_vertical"
        android:drawablePadding="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/this_is_the_business_name"
        app:layout_constraintTop_toBottomOf="@id/supplier_etv"
        app:layout_constraintStart_toStartOf="@id/supplier_etv"
        app:layout_constraintEnd_toEndOf="@id/supplier_etv"
        app:drawableStartCompat="@drawable/warning" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/supplier_add_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/Attention_text_1"
        app:layout_constraintStart_toStartOf="@id/supplier_etv"
        app:layout_constraintEnd_toEndOf="@id/supplier_etv">

        <TextView
            android:id="@+id/Attention_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/mattegrey"
            android:textSize="12sp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/add_this_supplier_to_the_list"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <Button
            android:id="@+id/dont_add_supplier"
            android:layout_width="56dp"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:visibility="gone"
            android:text="@string/close"
            android:padding="0dp"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:backgroundTint="@color/white"
            app:layout_constraintTop_toBottomOf="@id/Attention_text"
            app:layout_constraintEnd_toStartOf="@id/add_supplier"/>

        <Button
            android:id="@+id/add_supplier"
            android:layout_width="56dp"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:visibility="gone"
            android:text="@string/add"
            android:padding="0dp"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:backgroundTint="@color/teal_700"
            app:layout_constraintTop_toBottomOf="@id/Attention_text"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/Label6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/Wastage"
        android:labelFor="@id/supplier_etv"
        app:layout_constraintTop_toBottomOf="@id/supplier_add_layout"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/Label7"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:gravity="center"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:background="@drawable/etv_background"
        app:layout_constraintTop_toTopOf="@id/Label6"
        app:layout_constraintBottom_toBottomOf="@id/Label6"
        app:layout_constraintStart_toStartOf="@id/purity_etv"/>


    <EditText
        android:id="@+id/touch_etv"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/etv_background"
        android:layout_marginStart="8dp"
        android:paddingStart="8dp"
        android:paddingEnd="4dp"
        android:inputType="numberDecimal|numberSigned"
        app:layout_constraintTop_toTopOf="@id/Label7"
        app:layout_constraintStart_toEndOf="@id/Label7"
        app:layout_constraintBottom_toBottomOf="@id/Label7"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/TouchError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:gravity="center_vertical"
        android:textSize="11sp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/touch_etv"
        app:layout_constraintStart_toStartOf="@id/Label7"
        app:drawableStartCompat="@drawable/warning" />

        <Button
            android:id="@+id/clear_item"
            android:layout_width="64dp"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/clear"
            android:padding="0dp"
            android:textColor="@color/mattegrey1"
            android:textSize="11sp"
            android:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@id/save_item" />
        <Button
            android:id="@+id/save_item"
            android:layout_width="64dp"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/save"
            android:padding="0dp"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:backgroundTint="@color/teal_700"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
